--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,19 +1,25 @@
 .nav {
   grid-area: nav;
-  height: 100%;
+  box-sizing: border-box;
+  height: 94vh;
+  padding: 20vh 30px;
+
   display: flex;
   flex-direction: column;
-  background-color: #ffefcf;
-  padding: 20vh 30px;
+
+  background-color: #ffffff;
+  /* box-shadow: 2px 2px 6px #777d74; */
+  z-index: 1;
 }
 
 a {
-  margin: 0.2rem;
-  padding: 0.2rem;
-  color: #000040;
+  padding: 0.5rem;
+  color: #777d74;
   text-decoration: none;
 }
 
 a.active {
-  border-bottom: 0.1rem solid skyblue;
+  color: #50b5ff;
+  background: #f5fbff;
+  border-radius: 4px;
 }
