--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 .app-wrapper {
   display: grid;
   width: 100vw;
@@ -8,6 +10,8 @@
 
   grid-template-areas: ' header header'
     'nav main';
+
+  font-family: Poppins;
 }
 
 .header {
