--- a/src/colors.css
+++ b/src/colors.css
@@ -1,5 +1,6 @@
 :root {
-  --color-text: #777d74;
+  --color-text-headers: #3f414d;
+  --color-text-ui: #777d74;
   --color-background: #ffffff;
   --color-primary: #50b5ff;
   --color-secondary: #f5fbff;
