--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,3 +1,37 @@
-img {
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(3, auto);
+  gap: 1em;
+  margin: 1em auto;
+  width: 60vw;
+}
+
+.picture {
+  grid-row: 1;
+  grid-column: 1 / 3;
+  width: 100%;
+  height: 25vh;
+  background: #222222;
+}
+
+.tabs {
+  grid-row: 2;
+  grid-column: 1 / 3;
+  width: 100%;
+  height: min-content;
+}
+
+.aside {
+  grid-row: 3;
+  grid-column: 1;
+  width: 100%;
+  height: 30vh;
+  background: lightskyblue;
+}
+
+.postwall {
+  grid-row: 3;
+  grid-column: 3;
   width: 100%;
 }
