--- a/src/constants.css
+++ b/src/constants.css
@@ -1,4 +1,5 @@
 :root {
+  /* Colors */
   --color-text-headers: #3f414d;
   --color-text-unfocused: #a09e9e;
   --color-text-ui: #777d74;
@@ -8,5 +9,8 @@
   --color-border-light: #f1f1f1;
   --color-focus: #257c7c;
   --color-error: #dc3545;
-  
+
+  /* Sizes */
+  --border-radius-small: 0.5em;
+  --padding-primary: 1em;
 }
