--- a/src/components/Profile/PostsWall/Post/Post.module.css
+++ b/src/components/Profile/PostsWall/Post/Post.module.css
@@ -1,9 +1,39 @@
 .post {
+  color: var(--color-text-ui);
   display: block;
+  padding-bottom: var(--padding-primary);
 }
 
-.post img {
-  width: 20px;
-  height: 20px;
-  /* border-radius: 30px; */
+.header {
+  display: flex;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+}
+
+.title {
+  margin-left: var(--padding-primary);
+  margin-right: auto;
+}
+
+.time {
+  font-size: 0.8rem;
+}
+
+.name {
+  color: var(--color-text-headers);
+  font-size: 1rem;
+  padding: 0;
+  margin: 0;
+}
+
+.meta {
+  display: flex;
+  margin-bottom: var(--padding-primary);
+}
+
+.views {
+  font-size: 0.8rem;
 }
