--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,19 +7,19 @@
   display: flex;
   flex-direction: column;
 
-  background-color: #ffffff;
+  background-color: var(--color-background);
   /* box-shadow: 2px 2px 6px #777d74; */
   z-index: 1;
 }
 
 a {
   padding: 0.5rem;
-  color: #777d74;
+  color: var(--color-text-ui);
   text-decoration: none;
 }
 
 a.active {
-  color: #50b5ff;
-  background: #f5fbff;
+  color: var(--color-primary);
+  background: var(--color-secondary);
   border-radius: 4px;
 }
