--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,25 +1,40 @@
 .nav {
   grid-area: nav;
-  box-sizing: border-box;
   height: 94vh;
-  padding: 20vh 30px;
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
 
   background-color: var(--color-background);
-  /* box-shadow: 2px 2px 6px #777d74; */
   z-index: 1;
 }
 
-a {
-  padding: 0.5rem;
+.navLink {
+  flex: 1 1 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: var(--color-text-ui);
   text-decoration: none;
+  padding: 0.5rem;
 }
 
-a.active {
+.active {
   color: var(--color-primary);
   background: var(--color-secondary);
   border-radius: 4px;
+}
+
+@media (min-width: 1100px) {
+  .nav {
+    padding: var(--padding-primary);
+  }
+
+  .navLink {
+    display: inline;
+    flex: none;
+    text-align: center;
+    padding: var(--padding-primary);
+  }
 }
