--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -3,7 +3,8 @@
   grid-template-columns: 1fr 2fr;
   grid-template-rows: repeat(3, auto);
   gap: 1em;
-  margin: 1em auto;
+  margin: 0 auto;
+  padding: var(--padding-primary);
   width: 60vw;
 }
 
