Implement SideNav hide/open on menu button click

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,14 @@
 .nav {
+  position: absolute;
   height: 94vh;
+  width: 20vw;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  transform: translateX(-20vw);
+  transition: transform .3s cubic-bezier(0.39, 0.575, 0.565, 1);
 
   background-color: var(--color-background);
   z-index: 1;
@@ -36,4 +41,8 @@
     text-align: center;
     padding: var(--padding-primary);
   }
+}
+
+.isOpen {
+  transform: translateX(0)
 }
