Change Dialogs layout from grid to flex

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,10 +1,9 @@
 .dialogsWrapper {
-  display: grid;
-  grid-template-columns: 2fr 10fr;
+  display: flex;
+  flex-flow: column;
 
   margin: 0 auto;
   padding: var(--padding-primary);
-  width: 82vw;
 
   height: 94vh;
 
@@ -14,4 +13,15 @@
 .dialogs {
   /* padding: 2rem 0.5rem 2rem 1rem; */
   background: var(--color-background);
+}
+
+.dialogsChat {
+  flex: 1 1 80%;
+}
+
+@media (min-width: 769px) {
+  .dialogsWrapper {
+    flex-flow: row;
+    width: 82vw;
+  }
 }
