--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -6,7 +6,16 @@
   max-height: 5rem;
   min-width: 14rem;
   padding: 1rem;
+  margin: 1px 0px 1px 1px;
   align-items: center;
+}
+
+.DialogItem:focus-within {
+  outline: var(--color-primary) solid 0.5px;
+}
+
+.DialogItem_chosen {
+  background: var(--color-secondary);
 }
 
 .DialogItem-Link {
