--- a/src/constants.css
+++ b/src/constants.css
@@ -5,7 +5,7 @@
   --color-text-ui: #777d74;
   --color-background: #ffffff;
   --color-primary: #50b5ff;
-  --color-secondary: #f5fbff;
+  --color-secondary: #eef8ff;
   --color-border-light: #f1f1f1;
   --color-focus: #257c7c;
   --color-error: #dc3545;
