refactor(Avatar): Change css classes naming

--- a/src/components/Profile/Avatar/Avatar.module.css
+++ b/src/components/Profile/Avatar/Avatar.module.css
@@ -1,18 +1,18 @@
-.avatarWrapper {
+.Wrapper {
   position: relative;
 }
 
-.avatarImg {
+.Image {
   border-radius: 15%;
 }
 
-.avatarStatus {
+.Status {
   display: block;
   position: absolute;
   background: none;
   border-radius: 50%;  
 }
 
-.avatarStatus.online{
+.Status.online{
   background: greenyellow;
 }
