--- a/src/components/Dialogs/Chat/Messages/Messages.module.css
+++ b/src/components/Dialogs/Chat/Messages/Messages.module.css
@@ -2,6 +2,8 @@
   overflow-y: auto;
   background: var(--color-secondary);
   height: 100%;
+  padding: var(--padding-primary);
+  padding-bottom: 0;
 }
 
 .scrollAnchor {
