feat(Messages): Rework to work as container
Use specialized InfiniteScrollReverse
instead of doing its work itself.

--- a/src/components/Dialogs/Chat/Messages/Messages.module.css
+++ b/src/components/Dialogs/Chat/Messages/Messages.module.css
@@ -2,7 +2,7 @@
   overflow-y: auto;
   background: var(--color-secondary);
   height: 100%;
-  padding: var(--padding-primary);
+  padding: 0 var(--padding-primary);
   padding-bottom: 0;
 }
 
