feat(MessageItem): Hide Avatars on small screens

--- a/src/components/Dialogs/Chat/Messages/MessageItem/MessageItem.module.css
+++ b/src/components/Dialogs/Chat/Messages/MessageItem/MessageItem.module.css
@@ -8,8 +8,15 @@
 }
 
 .messageItemAvatar {
+  display: none;
   flex-shrink: 0;
   margin: 0 1em;
+}
+
+@media (min-width: 530px) {
+  .messageItemAvatar {
+    display: block;
+  }
 }
 
 .messageItemText {
