feat: Add variable for light text color

--- a/src/constants.css
+++ b/src/constants.css
@@ -3,6 +3,7 @@
   --color-text-headers: #3f414d;
   --color-text-unfocused: #a09e9e;
   --color-text-ui: #777d74;
+  --color-text-light: #ffffff;
   --color-background: #ffffff;
   --color-primary: #50b5ff;
   --color-secondary: #eef8ff;
