--- a/src/constants.css
+++ b/src/constants.css
@@ -8,6 +8,8 @@
   --color-primary: #50b5ff;
   --color-secondary: #eef8ff;
   --color-border-light: #f1f1f1;
+  --color-shadow-light: #d2d6d8;
+  --color-shadow-blue: #4988c4d3;
   --color-focus: #257c7c;
   --color-error: #dc3545;
 
