--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,7 +8,7 @@
 @media (min-width: 769px) {
   .dialogsWrapper {
     flex-flow: row;
-    max-width: 70vw;
+    max-width: 70ch;
     height: 90vh;
 
     margin: var(--padding-primary) auto;
