refactor(DialogItem): Use nested selectors

--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -8,14 +8,14 @@
   padding: 1rem;
   margin: 1px 0px 1px 1px;
   align-items: center;
-}
 
-.DialogItem:focus-within {
-  outline: var(--color-primary) solid 0.5px;
-}
+  &:focus-within {
+    outline: var(--color-primary) solid 0.5px;
+  }
 
-.DialogItem_chosen {
-  background: var(--color-secondary);
+  &_chosen {
+    background: var(--color-secondary);
+  }
 }
 
 .Link {
