--- a/src/components/Dialogs/ChatHeader/ChatHeader.module.css
+++ b/src/components/Dialogs/ChatHeader/ChatHeader.module.css
@@ -3,6 +3,9 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--padding-primary);
+
+  box-shadow: 0 0 0.7em rgba(32, 16, 16, 0.2);
+  clip-path: inset(0 0 -2em 0);
 }
 
 .ButtonBox {
