--- a/src/components/Dialogs/DialogsList/DialogsList.module.scss
+++ b/src/components/Dialogs/DialogsList/DialogsList.module.scss
@@ -12,10 +12,8 @@
   height: 95vh;
 
   background: var(--color-background);
-}
 
-@media (min-width: 769px) {
-  .dialogsList {
+  @media (min-width: 769px) {
     transition: none;
 
     flex-basis: 30%;
@@ -23,6 +21,12 @@
     position: static;
 
     background: none;
+  }
+
+  &_hidden {
+    position: absolute;
+    height: min-content;
+    transform: translateX(-900%);
   }
 }
 
@@ -33,18 +37,12 @@
   list-style-type: none;
 }
 
-.dialogsList_hidden {
-  position: absolute;
-  height: min-content;
-  transform: translateX(-900%);
-}
-
 .dialogsHeader {
   margin: var(--padding-primary);
   display: flex;
   justify-content: space-between;
-}
 
-.dialogsHeader > h2 {
-  margin: 0;
+  > h2 {
+    margin: 0;
+  }
 }
