--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,16 @@ code {
     monospace;
 }
 
+/* 
+Override some button styles which explicitly
+set incorrectly for some systems/DE(?) 
+*/
+button {
+  font-size: 1em;
+  font-family: var(--font-family);
+  padding: 0;
+}
+
 * {
   box-sizing: border-box;
 }
