feat(constants): Change focus color

--- a/src/constants.css
+++ b/src/constants.css
@@ -10,7 +10,7 @@
   --color-border-light: #f1f1f1;
   --color-shadow-light: #d2d6d8;
   --color-shadow-blue: #4988c4d3;
-  --color-focus: #257c7c;
+  --color-focus: #50b5ff;
   --color-error: #dc3545;
 
   /* Sizes */
