--- a/src/constants.css
+++ b/src/constants.css
@@ -8,6 +8,7 @@
   --color-primary: #77C6FE;
   --color-secondary: #eef8ff;
   --color-border-light: #f1f1f1;
+  --color-border-dark: #dbdbdb;
   --color-shadow-light: #d2d6d8;
   --color-shadow-blue: #4988c4d3;
   --color-focus: #50b5ff;
