feat(DialogsList): Add right border

--- a/src/components/Dialogs/DialogsList/DialogsList.module.scss
+++ b/src/components/Dialogs/DialogsList/DialogsList.module.scss
@@ -10,6 +10,7 @@
   width: 100%;
   min-height: 0;
   height: 95vh;
+  border-right: 0.08em solid var(--color-border-light);
 
   background: var(--color-background);
 
