--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   height: 5vh;
   z-index: 10;
+  padding: 0 var(--padding-primary);
 
   background-color: var(--color-background);
   box-shadow: 0px 0px 0.7em 0px rgba(32, 16, 16, 0.1);
