--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 .DialogItem {
   color: var(--color-text-header);
   position: relative;
@@ -17,7 +19,7 @@
   &::before {
     content: '';
     position: absolute;
-    left: 0.5em - $indicator-width / 2;
+    left: 0.5em - math.div($indicator-width, 2);
 
     height: 80%;
     width: $indicator-width;
