--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -60,23 +60,23 @@
   margin: 0;
 }
 
-.Meta {
-  font-size: 0.6rem;
-  flex: 0 0 2.5em;
-}
+// .Meta {
+//   font-size: 0.6rem;
+//   flex: 0 0 2.5em;
+// }
 
-.Count {
-  display: block;
-  height: 1.5em;
-  width: 1.5em;
+// .Count {
+//   display: block;
+//   height: 1.5em;
+//   width: 1.5em;
 
-  border-radius: 50%;
-  background: var(--color-primary);
-  color: var(--color-background);
-}
+//   border-radius: 50%;
+//   background: var(--color-primary);
+//   color: var(--color-background);
+// }
 
-.Passed {
-  padding: 1rem 0;
+// .Passed {
+//   padding: 1rem 0;
 
-  color: var(--color-primary);
-}
+//   color: var(--color-primary);
+// }
