--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -1,38 +1,28 @@
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: repeat(3, auto);
+.Wrapper {
+  display: flex;
+  flex-direction: column;
   gap: 1em;
   margin: 0 auto;
   padding: var(--padding-primary);
-  width: 60vw;
 }
 
 .picture {
-  grid-row: 1;
-  grid-column: 1 / 3;
   width: 100%;
   height: 25vh;
   background: #222222;
 }
 
 .tabs {
-  grid-row: 2;
-  grid-column: 1 / 3;
   width: 100%;
   height: min-content;
 }
 
 .aside {
-  grid-row: 3;
-  grid-column: 1;
   width: 100%;
   height: 30vh;
   background: lightskyblue;
 }
 
 .postwall {
-  grid-row: 3;
-  grid-column: 3;
   width: 100%;
 }
