--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -22,12 +22,28 @@
   height: min-content;
 }
 
-.aside {
-  width: 100%;
-  height: 30vh;
-  background: lightskyblue;
-}
+.Content {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: var(--padding-primary);
 
-.postwall {
-  width: 100%;
+  .Aside {
+    grid-column: 1 / 3;
+    width: 100%;
+    height: 30vh;
+    background: lightskyblue;
+
+    @media (min-width: 769px) {
+      grid-column: 1 / 2;
+    }
+  }
+
+  .Postwall {
+    grid-column: 1 / 3;
+    width: 100%;
+
+    @media (min-width: 769px) {
+      grid-column: 2 / 3;
+    }
+  }
 }
