--- a/src/components/common/Avatar/Avatar.module.css
+++ b/src/components/common/Avatar/Avatar.module.css
@@ -17,9 +17,21 @@
   width: 4rem;
 }
 
+.Wrapper_size_fill {
+  width: 100%;
+  padding-bottom: 100%;
+}
+
 .Image {
   border-radius: 15%;
   width: 100%;
+  height: 100%;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  right: -9999px;
+  bottom: -9999px;
+  margin: auto;
 }
 
 .Status {
