--- a/src/components/common/Gallery/Gallery.module.scss
+++ b/src/components/common/Gallery/Gallery.module.scss
@@ -2,7 +2,7 @@ $row-count: 2;
 
 .Wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(max(30%, 6em), 1fr));
   gap: var(--padding-primary);
 
   width: 100%;
