--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -30,8 +30,7 @@
   .Aside {
     grid-column: 1 / 3;
     width: 100%;
-    height: 30vh;
-    background: lightskyblue;
+    margin: calc(-1 * var(--padding-primary)) 0;
 
     @media (min-width: 782px) {
       grid-column: 1 / 2;
@@ -46,4 +45,8 @@
       grid-column: 2 / 3;
     }
   }
+}
+
+.Card {
+  margin: var(--padding-primary) 0;
 }
