--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,44 +1,35 @@
-.login {
-  position: relative;
-}
-
-.background {
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  min-height: 100vh;
-  width: 100%;
-
-  background: var(--color-primary);
-}
-
-.content {
-  position: relative;
-
+.Wrapper {
   display: flex;
-  flex-flow: row wrap;
-
-  height: 100vh;
-  padding: 0 8vw;
-}
-
-.carousel {
-  flex: 1 0 40vw;
-}
-
-.form {
-  flex: 1 0 40vw;
-  box-sizing: border-box;
+  flex-flow: row-reverse wrap;
+  align-content: center;
   
-  width: 40vw;
-  min-width: min-content;
-  padding: 2em;
+  height: 100vh;
+  background: var(--color-primary);
 
+  @media (min-width: 400px) {
+    align-content: initial;
+    padding: 0 8vw;
+  }
+}
+
+.Meta {
+  display: none;
+
+  @media (min-width: 900px) {
+    display: block;
+  }
+}
+
+.Form {
+  display: flex;
+  flex-flow: column nowrap;
+  place-content: center;
+
+  padding: 2em;
   background: var(--color-background);
 }
 
-.form > h1 {
+.Form > h1 {
   margin: 0.5rem 0;
   font-size: 3em;
   font-weight: 500;
