style: Format src directory

--- a/src/components/Dialogs/ChatInputs/ChatInputs.module.css
+++ b/src/components/Dialogs/ChatInputs/ChatInputs.module.css
@@ -14,7 +14,7 @@
 }
 
 .TextArea:focus {
-  border: 1px solid var(--color-primary)
+  border: 1px solid var(--color-primary);
 }
 
 .SubmitButtonText {
