--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
@@ -29,7 +29,7 @@
   .Avatar {
     width: 7em;
     height: 7em;
-    filter: drop-shadow(0 0.14em 0.1em rgb(43, 43, 43))
+    filter: drop-shadow(0 0.14em 0.1em rgb(43, 43, 43));
   }
 }
 
