--- a/src/components/common/Checkbox.module.css
+++ b/src/components/common/Checkbox.module.css
@@ -21,15 +21,15 @@
   border-radius: 0.3em;
 }
 
-.checkInput:focus +.checkBox {
+.checkInput:focus + .checkBox {
   box-shadow: 0 0 0.15em var(--color-primary);
 }
 
-
-  /* Checked */
+/* Checked */
 
 .checkInput:checked + .checkBox {
-  background: center no-repeat url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z' fill='%23ffffff'/%3E%3C/svg%3E");
+  background: center no-repeat
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z' fill='%23ffffff'/%3E%3C/svg%3E");
   background-size: 0.6em;
   background-color: var(--color-primary);
 
@@ -40,7 +40,7 @@
   box-shadow: 0 0 0.1em var(--color-primary);
 }
 
-  /* Disabled */
+/* Disabled */
 
 .checkInput:disabled + .checkBox {
   border: 0.01em var(--color-text-ui) solid;
