--- a/src/constants.css
+++ b/src/constants.css
@@ -5,7 +5,7 @@
   --color-text-ui: #777d74;
   --color-text-light: #ffffff;
   --color-background: #ffffff;
-  --color-primary: #77C6FE;
+  --color-primary: #77c6fe;
   --color-secondary: #eef8ff;
   --color-border-light: #f1f1f1;
   --color-border-dark: #dbdbdb;
