--- a/src/components/Dialogs/MessageItem/MessageItem.module.css
+++ b/src/components/Dialogs/MessageItem/MessageItem.module.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: flex-start;
-  padding: .4rem;
+  padding: 0.4rem;
 }
 
 .messageItemWrapper::after {
@@ -36,7 +36,7 @@
 
 .messageItemText {
   background: var(--color-background);
-  border-radius: .4em;
+  border-radius: 0.4em;
   padding: 1em;
   box-shadow: 0em 0.1em 0.2em var(--color-shadow-light);
 }
