--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
@@ -41,11 +41,9 @@
   margin: 0;
 }
 
-.Buttons {
-  position: absolute;
-  top: var(--padding-primary);
-  left: var(--padding-primary);
-  bottom: var(--padding-primary);
+.Controls {
+  .Buttons {
+  }
 }
 
 .DialogButton {
