feat(ProfileHeader): Add controls toggle button

--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.scss
@@ -41,7 +41,17 @@
   margin: 0;
 }
 
+.ButtonsToggle {
+  position: absolute;
+  top: -5rem;
+  left: var(--padding-primary);
+
+  transform: rotateZ(90deg);
+}
+
 .Controls {
+  position: relative;
+
   .Buttons {
   }
 }
