--- a/src/components/Dialogs/Chat/Chat.module.css
+++ b/src/components/Dialogs/Chat/Chat.module.css
@@ -1,6 +1,7 @@
 .chatWrapper {
   justify-content: space-between;
   flex-flow: column;
+  flex: 6;
 
   /* fix messages scroll in mobile layout*/
   min-height: 0;
