--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -22,9 +22,38 @@
   display: flex;
 }
 
+/* 
+  Use pseudoelement to dim chat 
+  when dialogs list overlap it in mobile layout
+*/
+.dialogsChat::before {
+  content: '';
+  z-index: 2;
+  position: absolute;
+  pointer-events: none;
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.76);
+  opacity: 0;
+  transition: opacity 300ms ease-out;
+}
+
+.dialogsChat_overlapped::before {
+  opacity: 1;
+}
+
+@media (min-width: 769px) {
+  /* Disable dimming in desktop layout */
+  .dialogsChat_overlapped::before {
+    opacity: 0;
+  }
+}
+
 .ControlButton {
   position: absolute;
-  z-index: 3;
+  z-index: 4;
   top: calc(var(--padding-primary) - 0.3em);
   left: calc(var(--padding-primary) - 0.4em);
 }
