--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -24,6 +24,7 @@
   display: flex;
   flex-flow: column nowrap;
   place-content: center;
+  min-width: min(100%, 55ch);
 
   padding: 2em;
   background: var(--color-background);
