--- a/src/common/components/CroppedImage/CroppedImage.module.scss
+++ b/src/common/components/CroppedImage/CroppedImage.module.scss
@@ -5,21 +5,17 @@
   border: none;
 
   width: 100%;
-
+  
   // Keep Wrapper aspect ratio 1:1
-  &::after {
-    content: '';
-    display: block;
-    padding-bottom: 100%;
-  }
+  padding-bottom: 100%;
 
   .Image {
     // Center image in wrapper
+    object-fit: cover;
     position: absolute;
-    top: -9999px;
-    bottom: -9999px;
-    left: -9999px;
-    right: -9999px;
-    margin: auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
