--- a/src/common/components/Header/Header.module.css
+++ b/src/common/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   display: flex;
-  height: 5vh;
+  height: 5.1ch;
   z-index: 10;
   padding: 0 var(--padding-primary);
 
