--- a/src/common/components/Header/Header.module.css
+++ b/src/common/components/Header/Header.module.css
@@ -5,17 +5,21 @@
   height: 5.1ch;
   z-index: 10;
   padding: 0 var(--padding-primary);
+  align-items: center;
 
   background-color: var(--color-background);
   box-shadow: 0px 0px 0.7em 0px rgba(32, 16, 16, 0.1);
 }
 
-.header img {
-  height: 100%;
-  padding-right: var(--padding-primary);
+.heading {
+  padding: 0 0.5rem 0 0;
+  margin: 0;
+}
+
+.heading > span {
+  color: var(--color-primary);
 }
 
 .logoutButton {
   margin-left: auto;
-  margin-right: 1em;
 }
