--- a/src/common/components/Lightbox/Lightbox.module.scss
+++ b/src/common/components/Lightbox/Lightbox.module.scss
@@ -26,9 +26,11 @@
 }
 
 .Wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   height: 90vh;
+  width: 90vw;
 
   @media (min-width: 400px) {
     height: 70vh;
